<resources>

    <string name="title_home">Početna stranica</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="confirm">Potvrda</string>
    <string name="exit">Izlaz</string>
    <string name="userName">Korisničko ime</string>
    <string name="password">Zaporka</string>
    <string name="insert">Unos</string>
    <string name="back">Povratak</string>
    <string name="edit">Izmjena</string>
    <string name="delete">Brisanje</string>
    <string name="trainers_form">Evidencija trenera</string>
    <string name="age_category_form">Evidencija dobne kategorije</string>
    <string name="turnaments_form">Evidencija natjecanja</string>
    <string name="grades_form">Evidencija ocjena</string>
    <string name="athletes_form">Evidencija sportaša</string>
    <string name="statistics_form">Evidencija statistike</string>
    <string name="coaches_form">Evidencija trenera</string>
    <string name="users_form">Evidencija korisnika</string>
    <string name="user_insert">Unos korisnika</string>
    <string name="training_form">Evidencija treniga</string>
    <string name="games_form">Evidencija utakmica</string>
    <string name="home_page">Početna stranica</string>
    <string name="user_page">Korisnici</string>
    <string name="turnaments">Natjecanja</string>
    <string name="turnament">Natjecanje</string>
    <string name="age_categories">Dobne kategorije</string>
    <string name="age_category">Dobna kategorija</string>
    <string name="training">Treninzi</string>
    <string name="news">Vijesti</string>
    <string name="statistics">Statistika</string>
    <string name="game">Utakmica</string>
    <string name="grades">Ocijena trenera</string>
    <string name="grades_preview">Pregled ocijena</string>
    <string name="grades_insert">Ocjenjivanje trenera</string>
    <string name="athletes">Sportaši</string>
    <string name="athlet">Sportaš</string>
    <string name="coaches">Treneri</string>
    <string name="coach">Trener</string>
    <string name="birthdate">Datum rođenja</string>
    <string name="father_name">Ime oca</string>
    <string name="mather_name">Ime majke</string>
    <string name="new_b">Novi unos</string>
    <string name="del_b">Obrisi</string>
    <string name="type">Tip</string>
    <string name="name">Ime</string>
    <string name="name_">Naziv</string>
    <string name="description">Opis</string>
    <string name="teams_number">Broj ekipa</string>
    <string name="start">Početak</string>
    <string name="end">Kraj</string>
    <string name="surname">Prezime</string>
    <string name="oib">OIB</string>
    <string name="qualifications">Strucna sprema</string>
    <string name="login_empty_fields">Za prijavu u aplikaciju potrebno je upisati korisničko ime i zaporku</string>
    <string name="login_no_response">Ne postojeći korisnik</string>
    <string name="login_multiple_response">Greska prilikom prijave. Kontaktirajte administratora</string>
    <string name="deleteTitle">Brisanje vrijednosti</string>
    <string name="deleteUser">Dali stvarno želite obrisati korisnika</string>
    <string name="selectUser">Potrebno je označiti korisnika</string>
    <string name="lower_limit">Doljnja dobna granica</string>
    <string name="upper_limit">Gornja dobna granica</string>
    <string name="host">Domaćin</string>
    <string name="guest">Gost</string>
    <string name="location">Lokacija</string>
    <string name="appointment">Termin</string>
    <string name="minutes_in_game">Minute provedene u igri</string>
    <string name="attack_jumps">Napadački skokovi</string>
    <string name="defence_jump">Skokovi u obrani</string>
    <string name="assists">Asistencije</string>
    <string name="fauls">Osobne pogreške</string>
    <string name="points">Poeni</string>
    <string name="comemnt">Komentar</string>
    <string name="arrivals">Dolasci</string>



</resources>
