<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        android:layout_marginTop="17dp"
        app:layout_constraintBottom_toTopOf="@+id/b_insert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/l_ime"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:text="@string/name"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="28dp" />

            <EditText
                android:id="@+id/t_ime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/l_prezime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="135dp" />

            <EditText
                android:id="@+id/t_prezime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="145dp" />

            <TextView
                android:id="@+id/l_datumRodjenja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthdate" />

            <EditText
                android:id="@+id/t_datumRodjenja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/father_name" />

            <EditText
                android:id="@+id/t_imeOca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mather_name" />

            <EditText
                android:id="@+id/t_imeMajke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_category" />

            <Spinner
                android:id="@+id/s_dobnaKategorija"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="407dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/b_insert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="37dp"
        android:text="@string/insert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/b_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="7dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b_insert" />

</android.support.constraint.ConstraintLayout>